--- a/HelloEvent_Frontend/src/app/login/login.component.html
+++ b/HelloEvent_Frontend/src/app/login/login.component.html
@@ -5,13 +5,19 @@
       <form [formGroup]="formLogin" (ngSubmit)="handleLogin()">
         <div class="mb-3">
           <label class="form-label">Email</label>
-          <input type="text" class="form-control" formControlName="email">
+          <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': formLogin.get('email')?.invalid && formLogin.get('email')?.touched}">
+          <div *ngIf="formLogin.get('email')?.invalid && formLogin.get('email')?.touched" class="invalid-feedback">
+            Email is required and must be valid.
+          </div>
         </div>
         <div class="mb-3">
           <label class="form-label">Password</label>
-          <input type="password" class="form-control" formControlName="password">
+          <input type="password" class="form-control" formControlName="password" [ngClass]="{'is-invalid': formLogin.get('password')?.invalid && formLogin.get('password')?.touched}">
+          <div *ngIf="formLogin.get('password')?.invalid && formLogin.get('password')?.touched" class="invalid-feedback">
+            Password is required.
+          </div>
         </div>
-        <button type="submit" class="btn btn-success">Login</button>
+        <button type="submit" class="btn btn-success" [disabled]="formLogin.invalid">Login</button>
       </form>
     </div>
   </div>
